--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>KlingelballUI</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QPushButton{border-image: url(:/new/prefix1/ButtonUp.png);}</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
@@ -25,8 +28,7 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">
-</string>
+       <string notr="true"/>
       </property>
       <property name="text">
        <string>Klingelball</string>
@@ -54,6 +56,9 @@
       <property name="tabShape">
        <enum>QTabWidget::Rounded</enum>
       </property>
+      <property name="currentIndex">
+       <number>0</number>
+      </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
         <string>Sound</string>
@@ -66,22 +71,15 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
-         <widget class="QPushButton" name="pushButton">
-          <property name="text">
-           <string>PushButton</string>
-          </property>
-         </widget>
-        </item>
         <item row="2" column="0">
-         <widget class="QLabel" name="label_3">
+         <widget class="QLabel" name="SoundPercent">
           <property name="text">
            <string>TextLabel</string>
           </property>
          </widget>
         </item>
         <item row="3" column="0">
-         <widget class="QPushButton" name="pushButton_2">
+         <widget class="QPushButton" name="SoundDown">
           <property name="text">
            <string>PushButton</string>
           </property>
@@ -147,6 +145,20 @@
          <widget class="QPushButton" name="pushButton_6">
           <property name="text">
            <string>PushButton</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QPushButton" name="SoundUp">
+          <property name="font">
+           <font>
+            <family>SansSerif</family>
+            <pointsize>14</pointsize>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="text">
+           <string/>
           </property>
          </widget>
         </item>
