--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -49,7 +49,7 @@
       <property name="font">
        <font>
         <family>SansSerif</family>
-        <pointsize>14</pointsize>
+        <pointsize>22</pointsize>
         <bold>true</bold>
        </font>
       </property>
@@ -153,6 +153,9 @@
             <property name="keyboardTracking">
              <bool>false</bool>
             </property>
+            <property name="suffix">
+             <string>%</string>
+            </property>
             <property name="maximum">
              <number>100</number>
             </property>
@@ -239,7 +242,7 @@
            </widget>
           </item>
           <item row="4" column="1">
-           <widget class="QPushButton" name="Bis_Frequ_Down_2">
+           <widget class="QPushButton" name="Bis_Frequ_Down">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
               <horstretch>0</horstretch>
@@ -302,7 +305,7 @@
            </widget>
           </item>
           <item row="3" column="0">
-           <widget class="QSpinBox" name="Bis_Frequ_2">
+           <widget class="QSpinBox" name="Von_Frequ">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
               <horstretch>0</horstretch>
@@ -338,6 +341,9 @@
             </property>
             <property name="keyboardTracking">
              <bool>false</bool>
+            </property>
+            <property name="suffix">
+             <string>%</string>
             </property>
             <property name="maximum">
              <number>100</number>
@@ -381,6 +387,9 @@
             </property>
             <property name="keyboardTracking">
              <bool>false</bool>
+            </property>
+            <property name="suffix">
+             <string>%</string>
             </property>
             <property name="maximum">
              <number>100</number>
@@ -470,7 +479,7 @@
   <connection>
    <sender>Von_Frequ_Down</sender>
    <signal>clicked()</signal>
-   <receiver>Bis_Frequ_2</receiver>
+   <receiver>Von_Frequ</receiver>
    <slot>stepDown()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -486,7 +495,7 @@
   <connection>
    <sender>Von_Frequ_Up</sender>
    <signal>clicked()</signal>
-   <receiver>Bis_Frequ_2</receiver>
+   <receiver>Von_Frequ</receiver>
    <slot>stepUp()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -516,7 +525,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>Bis_Frequ_Down_2</sender>
+   <sender>Bis_Frequ_Down</sender>
    <signal>clicked()</signal>
    <receiver>Bis_Frequ</receiver>
    <slot>stepDown()</slot>
