--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>262</width>
-    <height>453</height>
+    <width>448</width>
+    <height>730</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,33 +17,7 @@
    <string notr="true">QPushButton{border-image: url(:/new/prefix1/ButtonUp.png);}</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,10,1">
-    <item>
-     <widget class="QLabel" name="Header">
-      <property name="font">
-       <font>
-        <family>SansSerif</family>
-        <pointsize>26</pointsize>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true"/>
-      </property>
-      <property name="text">
-       <string>Klingelball</string>
-      </property>
-      <property name="textFormat">
-       <enum>Qt::AutoText</enum>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-      <property name="wordWrap">
-       <bool>false</bool>
-      </property>
-     </widget>
-    </item>
+   <layout class="QVBoxLayout" name="verticalLayout_2" stretch="20,3">
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="font">
@@ -59,11 +33,11 @@
       <property name="currentIndex">
        <number>0</number>
       </property>
-      <widget class="QWidget" name="tab">
+      <widget class="QWidget" name="Sound_Tab">
        <attribute name="title">
         <string>Sound</string>
        </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_3" stretch="3,4">
+       <layout class="QVBoxLayout" name="verticalLayout_3" stretch="0,0">
         <property name="sizeConstraint">
          <enum>QLayout::SetNoConstraint</enum>
         </property>
@@ -71,7 +45,10 @@
          <number>6</number>
         </property>
         <item>
-         <layout class="QVBoxLayout" name="Volume_Layout" stretch="2,5,3,5">
+         <layout class="QVBoxLayout" name="Volume_Layout" stretch="4,4,4,4">
+          <property name="spacing">
+           <number>4</number>
+          </property>
           <item>
            <widget class="QLabel" name="Volume_Label">
             <property name="sizePolicy">
@@ -82,7 +59,7 @@
             </property>
             <property name="font">
              <font>
-              <pointsize>26</pointsize>
+              <pointsize>20</pointsize>
               <bold>true</bold>
              </font>
             </property>
@@ -98,6 +75,9 @@
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
+            </property>
+            <property name="accessibleName">
+             <string>Volume Up</string>
             </property>
             <property name="styleSheet">
              <string notr="true"/>
@@ -128,7 +108,7 @@
             </property>
             <property name="font">
              <font>
-              <pointsize>26</pointsize>
+              <pointsize>20</pointsize>
               <bold>true</bold>
              </font>
             </property>
@@ -136,7 +116,10 @@
              <cursorShape>BlankCursor</cursorShape>
             </property>
             <property name="focusPolicy">
-             <enum>Qt::NoFocus</enum>
+             <enum>Qt::ClickFocus</enum>
+            </property>
+            <property name="accessibleName">
+             <string>Volume</string>
             </property>
             <property name="frame">
              <bool>false</bool>
@@ -172,6 +155,9 @@
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="accessibleName">
+             <string>Volume Down</string>
+            </property>
             <property name="text">
              <string/>
             </property>
@@ -185,23 +171,120 @@
          </layout>
         </item>
         <item>
-         <layout class="QGridLayout" name="Sound_Layout" rowstretch="2,2,4,3,4" columnstretch="0,0">
+         <layout class="QGridLayout" name="Sound_Layout" rowstretch="7,7,10,7,10" columnstretch="0,0">
           <property name="sizeConstraint">
            <enum>QLayout::SetMaximumSize</enum>
+          </property>
+          <property name="horizontalSpacing">
+           <number>6</number>
           </property>
           <property name="verticalSpacing">
            <number>4</number>
           </property>
-          <item row="1" column="0">
-           <widget class="QLabel" name="Von_Frequenz_Label">
+          <item row="4" column="1">
+           <widget class="QPushButton" name="Bis_Frequ_Down">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="accessibleName">
+             <string>Bis Frenquenz down</string>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset>
+              <selectedoff>:/new/prefix1/Chevron_down.png</selectedoff>
+             </iconset>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QPushButton" name="Bis_Frequ_Up">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="accessibleName">
+             <string>Bis Frequenz Up</string>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset>
+              <selectedoff>:/new/prefix1/Chevron_Up.png</selectedoff>
+             </iconset>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1">
+           <widget class="QSpinBox" name="Bis_Frequ">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="font">
              <font>
-              <pointsize>26</pointsize>
+              <pointsize>20</pointsize>
+              <bold>true</bold>
+             </font>
+            </property>
+            <property name="cursor">
+             <cursorShape>BlankCursor</cursorShape>
+            </property>
+            <property name="mouseTracking">
+             <bool>false</bool>
+            </property>
+            <property name="focusPolicy">
+             <enum>Qt::ClickFocus</enum>
+            </property>
+            <property name="accessibleName">
+             <string>Frequenz bis</string>
+            </property>
+            <property name="frame">
+             <bool>false</bool>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
+            <property name="readOnly">
+             <bool>true</bool>
+            </property>
+            <property name="buttonSymbols">
+             <enum>QAbstractSpinBox::NoButtons</enum>
+            </property>
+            <property name="keyboardTracking">
+             <bool>false</bool>
+            </property>
+            <property name="suffix">
+             <string>%</string>
+            </property>
+            <property name="maximum">
+             <number>100</number>
+            </property>
+            <property name="singleStep">
+             <number>5</number>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QLabel" name="Bis_Frequenz_Label">
+            <property name="font">
+             <font>
+              <pointsize>20</pointsize>
               <bold>true</bold>
              </font>
             </property>
             <property name="text">
-             <string>Von:</string>
+             <string>Bis:</string>
             </property>
            </widget>
           </item>
@@ -212,6 +295,9 @@
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
+            </property>
+            <property name="accessibleName">
+             <string>Von Frequenz Down</string>
             </property>
             <property name="text">
              <string/>
@@ -231,54 +317,8 @@
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
-            <property name="text">
-             <string/>
-            </property>
-            <property name="icon">
-             <iconset>
-              <selectedoff>:/new/prefix1/Chevron_Up.png</selectedoff>
-             </iconset>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="1">
-           <widget class="QPushButton" name="Bis_Frequ_Down">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-            <property name="icon">
-             <iconset>
-              <selectedoff>:/new/prefix1/Chevron_down.png</selectedoff>
-             </iconset>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QLabel" name="Bis_Frequenz_Label">
-            <property name="font">
-             <font>
-              <pointsize>26</pointsize>
-              <bold>true</bold>
-             </font>
-            </property>
-            <property name="text">
-             <string>Bis:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1">
-           <widget class="QPushButton" name="Bis_Frequ_Up">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
+            <property name="accessibleName">
+             <string>Von Frequenz Up</string>
             </property>
             <property name="text">
              <string/>
@@ -290,17 +330,16 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="0">
-           <widget class="QLabel" name="Frequenz_Label">
+          <item row="1" column="0">
+           <widget class="QLabel" name="Von_Frequenz_Label">
             <property name="font">
              <font>
-              <pointsize>26</pointsize>
+              <pointsize>20</pointsize>
               <bold>true</bold>
-              <kerning>true</kerning>
              </font>
             </property>
             <property name="text">
-             <string>Frequenz</string>
+             <string>Von:</string>
             </property>
            </widget>
           </item>
@@ -314,7 +353,7 @@
             </property>
             <property name="font">
              <font>
-              <pointsize>26</pointsize>
+              <pointsize>20</pointsize>
               <bold>true</bold>
              </font>
             </property>
@@ -322,7 +361,10 @@
              <cursorShape>BlankCursor</cursorShape>
             </property>
             <property name="focusPolicy">
-             <enum>Qt::NoFocus</enum>
+             <enum>Qt::ClickFocus</enum>
+            </property>
+            <property name="accessibleName">
+             <string>Frequenz von</string>
             </property>
             <property name="wrapping">
              <bool>false</bool>
@@ -353,49 +395,17 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="1">
-           <widget class="QSpinBox" name="Bis_Frequ">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
+          <item row="0" column="0">
+           <widget class="QLabel" name="Frequenz_Label">
             <property name="font">
              <font>
-              <pointsize>26</pointsize>
+              <pointsize>20</pointsize>
               <bold>true</bold>
+              <kerning>true</kerning>
              </font>
             </property>
-            <property name="cursor">
-             <cursorShape>BlankCursor</cursorShape>
-            </property>
-            <property name="focusPolicy">
-             <enum>Qt::NoFocus</enum>
-            </property>
-            <property name="frame">
-             <bool>false</bool>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-            <property name="readOnly">
-             <bool>true</bool>
-            </property>
-            <property name="buttonSymbols">
-             <enum>QAbstractSpinBox::NoButtons</enum>
-            </property>
-            <property name="keyboardTracking">
-             <bool>false</bool>
-            </property>
-            <property name="suffix">
-             <string>%</string>
-            </property>
-            <property name="maximum">
-             <number>100</number>
-            </property>
-            <property name="singleStep">
-             <number>5</number>
+            <property name="text">
+             <string>Frequenz</string>
             </property>
            </widget>
           </item>
@@ -403,9 +413,14 @@
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="tab_2">
+      <widget class="QWidget" name="Light_Tab">
        <attribute name="title">
-        <string>Tab 2</string>
+        <string>Light</string>
+       </attribute>
+      </widget>
+      <widget class="QWidget" name="tab">
+       <attribute name="title">
+        <string>Seite</string>
        </attribute>
       </widget>
      </widget>
@@ -421,9 +436,9 @@
       <item>
        <widget class="QPushButton" name="pushButton_7">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
-          <verstretch>2</verstretch>
+          <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
@@ -431,6 +446,12 @@
           <width>0</width>
           <height>0</height>
          </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>20</pointsize>
+          <bold>true</bold>
+         </font>
         </property>
         <property name="text">
          <string>Übertragen</string>
