--- a/lightmode.css
+++ b/lightmode.css
@@ -44,7 +44,10 @@ QSpinBox{
 
 QGroupBox{
     color: black;
+    margin-top: 5px;
+    font-weight: bold;
     border: 3px solid black;
+    border-radius: 10px;
     background-color: transparent;
 }
 QCheckBox{
