--- a/darkmode.css
+++ b/darkmode.css
@@ -44,7 +44,14 @@ QTabBar::tab:selected {
 QTabBar::tab:!selected {
     color: #828181;
     background: transparent;
+}
 
+QTabBar::tab::disabled{
+    width: 0;
+    height: 0;
+    margin: 0;
+    padding: 0;
+    border: none;
 }
 
 QSpinBox{
@@ -64,6 +71,12 @@ QGroupBox{
 QGroupBox::checked{
     border: 2px solid black;
     border-radius: 7px;
+}
+
+QGroupBox::indicator{
+    width: 0px;
+    border: none;
+    background: transparent;
 }
 
 QCheckBox{
