--- a/lightmode.css
+++ b/lightmode.css
@@ -38,6 +38,14 @@ QTabBar::tab:!selected {
 
 }
 
+QTabBar::tab::disabled{
+    width: 0;
+    height: 0;
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
 QSpinBox{
     Background: transparent;
 }
@@ -50,6 +58,13 @@ QGroupBox{
     border-radius: 10px;
     background-color: transparent;
 }
+
+QGroupBox::indicator{
+    width: 0px;
+    border: none;
+    background: transparent;
+}
+
 QCheckBox{
     color: black;
 }
