--- a/darkmode.css
+++ b/darkmode.css
@@ -12,6 +12,7 @@ QPushButton{
 QPushButton::pressed{
     border: 2px solid black;
     border-radius: 7px;
+    background: #b5b5b5;
 
 }
 
@@ -71,6 +72,7 @@ QGroupBox{
 QGroupBox::checked{
     border: 2px solid black;
     border-radius: 7px;
+    background: #b5b5b5;
 }
 
 QGroupBox::indicator{
