--- a/UI-Resources.qrc
+++ b/UI-Resources.qrc
@@ -3,6 +3,9 @@
         <file>Chevron_Up.png</file>
         <file>Chevron_down.png</file>
         <file>settings_icon_176440.png</file>
+        <file>Chevron_down_inverted.png</file>
+        <file>Chevron_Up_inverted.png</file>
+        <file>settingsIcon_inverted.png</file>
     </qresource>
     <qresource prefix="/stylesheet">
         <file>lightmode.css</file>
