--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -75,6 +75,9 @@
             <property name="text">
              <string>Lautstärke</string>
             </property>
+            <property name="alignment">
+             <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+            </property>
             <property name="textInteractionFlags">
              <set>Qt::LinksAccessibleByMouse</set>
             </property>
@@ -99,7 +102,7 @@
             </property>
             <property name="icon">
              <iconset resource="UI-Resources.qrc">
-              <normaloff>:/Icons/Chevron_Up.png</normaloff>:/Icons/Chevron_Up.png</iconset>
+              <normaloff>:/Icons/Chevron_Up_inverted.png</normaloff>:/Icons/Chevron_Up_inverted.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -174,7 +177,7 @@
             </property>
             <property name="icon">
              <iconset resource="UI-Resources.qrc">
-              <normaloff>:/Icons/Chevron_down.png</normaloff>:/Icons/Chevron_down.png</iconset>
+              <normaloff>:/Icons/Chevron_down_inverted.png</normaloff>:/Icons/Chevron_down_inverted.png</iconset>
             </property>
            </widget>
           </item>
@@ -207,7 +210,7 @@
             </property>
             <property name="icon">
              <iconset resource="UI-Resources.qrc">
-              <normaloff>:/Icons/Chevron_down.png</normaloff>:/Icons/Chevron_down.png</iconset>
+              <normaloff>:/Icons/Chevron_down_inverted.png</normaloff>:/Icons/Chevron_down_inverted.png</iconset>
             </property>
            </widget>
           </item>
@@ -227,7 +230,7 @@
             </property>
             <property name="icon">
              <iconset resource="UI-Resources.qrc">
-              <normaloff>:/Icons/Chevron_Up.png</normaloff>:/Icons/Chevron_Up.png</iconset>
+              <normaloff>:/Icons/Chevron_Up_inverted.png</normaloff>:/Icons/Chevron_Up_inverted.png</iconset>
             </property>
            </widget>
           </item>
@@ -294,6 +297,9 @@
             <property name="text">
              <string>Bewegend:</string>
             </property>
+            <property name="alignment">
+             <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+            </property>
            </widget>
           </item>
           <item row="4" column="0">
@@ -312,7 +318,7 @@
             </property>
             <property name="icon">
              <iconset resource="UI-Resources.qrc">
-              <normaloff>:/Icons/Chevron_down.png</normaloff>:/Icons/Chevron_down.png</iconset>
+              <normaloff>:/Icons/Chevron_down_inverted.png</normaloff>:/Icons/Chevron_down_inverted.png</iconset>
             </property>
            </widget>
           </item>
@@ -332,7 +338,7 @@
             </property>
             <property name="icon">
              <iconset resource="UI-Resources.qrc">
-              <normaloff>:/Icons/Chevron_Up.png</normaloff>:/Icons/Chevron_Up.png</iconset>
+              <normaloff>:/Icons/Chevron_Up_inverted.png</normaloff>:/Icons/Chevron_Up_inverted.png</iconset>
             </property>
            </widget>
           </item>
@@ -346,6 +352,9 @@
             </property>
             <property name="text">
              <string>Stillstehend:</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
             </property>
            </widget>
           </item>
@@ -413,6 +422,9 @@
             <property name="text">
              <string>Frequenz</string>
             </property>
+            <property name="alignment">
+             <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+            </property>
            </widget>
           </item>
          </layout>
@@ -433,7 +445,7 @@
            <number>0</number>
           </property>
           <widget class="QWidget" name="Profil_page">
-           <layout class="QGridLayout" name="gridLayout" rowminimumheight="0,0,0">
+           <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0" rowminimumheight="0,0,0">
             <item row="0" column="0">
              <widget class="QScrollArea" name="scrollArea">
               <property name="verticalScrollBarPolicy">
@@ -450,8 +462,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>406</width>
-                 <height>487</height>
+                 <width>388</width>
+                 <height>403</height>
                 </rect>
                </property>
                <layout class="QGridLayout" name="gridLayout_2">
@@ -477,8 +489,14 @@
               <property name="minimumSize">
                <size>
                 <width>0</width>
-                <height>35</height>
+                <height>50</height>
                </size>
+              </property>
+              <property name="font">
+               <font>
+                <pointsize>16</pointsize>
+                <bold>true</bold>
+               </font>
               </property>
               <property name="text">
                <string>Neues Profil aus aktuellen Einstellungen</string>
@@ -487,6 +505,24 @@
             </item>
             <item row="2" column="0">
              <widget class="QPushButton" name="delete_current_profile_button">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>50</height>
+               </size>
+              </property>
+              <property name="font">
+               <font>
+                <pointsize>16</pointsize>
+                <bold>true</bold>
+               </font>
+              </property>
               <property name="text">
                <string>Ausgewähltes Profil löschen</string>
               </property>
@@ -534,6 +570,9 @@
                <font>
                 <pointsize>16</pointsize>
                </font>
+              </property>
+              <property name="accessibleName">
+               <string>Profilname eingabe</string>
               </property>
              </widget>
             </item>
@@ -618,7 +657,7 @@
        </property>
        <attribute name="icon">
         <iconset resource="UI-Resources.qrc">
-         <normaloff>:/Icons/settings_icon_176440.png</normaloff>:/Icons/settings_icon_176440.png</iconset>
+         <normaloff>:/Icons/settingsIcon_inverted.png</normaloff>:/Icons/settingsIcon_inverted.png</iconset>
        </attribute>
        <attribute name="title">
         <string/>
@@ -658,6 +697,9 @@
             <height>20</height>
            </size>
           </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
          </widget>
         </item>
         <item>
@@ -682,7 +724,7 @@
            </size>
           </property>
           <property name="checked">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <property name="tristate">
            <bool>false</bool>
