--- a/lightmode.css
+++ b/lightmode.css
@@ -1,10 +1,19 @@
+QWidget
+{
+   background-color: white;
+}
+
+
+
 QPushButton{
-    Background: transparent;
+    color: white;
+    Background: #e50616;
     border: 3px solid black;
     border-radius: 10px;
 }
 
 QPushButton::pressed{
+    Background: #5b5b5b;
     border: 2px solid black;
     border-radius: 7px;
 
@@ -15,26 +24,42 @@ QLabel{
 }
 
 QTabWidget{
-    text-decoration: underline;
+
+
 }
 
+
 QTabWidget::pane {
-    border-style: none;
+    border: 4px solid black;
+    border-radius: 5px;
     background: transparent;
 }
 
 
 QTabWidget::tab-bar {
      alignment: center;
+
+}
+
+QTabBar::tab{
+    border: 2px solid black;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 5px;
+    width: 100px;
 }
 
 QTabBar::tab:selected {
+    color: black;
     background: transparent;
-    color: blue;
+    border-radius: 5px;
 }
 
 QTabBar::tab:!selected {
-    background: transparent;
+
+    color: white;
+    background: #e50616;
+    border-radius: 5px;
 
 }
 
@@ -51,16 +76,17 @@ QSpinBox{
 }
 
 QGroupBox{
-    color: black;
+    color: white;
     margin-top: 5px;
     font-weight: bold;
     border: 3px solid black;
     border-radius: 10px;
-    background-color: transparent;
+    background-color: #1a8714;
 }
 
 QGroupBox::checked{
-    border: 2px solid black;
+    border: 7px solid #1a8714;
+    background: transparent;
     border-radius: 7px;
 }
 
@@ -77,5 +103,10 @@ QCheckBox{
 QCheckBox::indicator {
      width: 27px;
      height: 27px;
+}
+
+QScrollArea{
+    border: 3px solid black;
+    border-radius: 7px;
 }
 
